[tool.poetry]
name = "nonebot_plugin_jx3"
version = "0.5.4"
authors = [
    { name="fuyang", email="415276785@qq.com" },
]
description = "一个nonebot2的jx3插件"
readme = "README.md"
Homepage = "https://github.com/fuyang0811/nonebot-plugin-jx3.git"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc1"
nonebot-adapter-onebot = "^2.0.0"
httpx= "^0.19.0"
tinydb= "^4.5.1"
aiohttp= "^3.7.4"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"





