[tool.poetry]
name = "nonebot-plugin-jx3"
version = "0.5.5"
description = "一个nonebot2的jx3插件"
authors = ["water <415276785@qq.com>"]
license ="MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_jx3"}]
homepage = "https://github.com/fuyang0811/nonebot-plugin-jx3.git"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc1"
nonebot-adapter-onebot = "^2.0.0"
httpx= "^0.19.0"
tinydb= "^4.5.1"
aiohttp= "^3.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"





